--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html lang="en">
 <body>
 
-<h1>My First Heading</h1>
-
+    <head>
+        <title>Dimitrios Samaras | Software Engineer</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#2c2c2c" />
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="assets/css/main.css" />
+        <link href="assets/css/print.css" media="print" rel="stylesheet" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+      </head>
 
 </body>
 </html>
