--- a/index.html
+++ b/index.html
@@ -14,6 +14,22 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
       </head>
 
+    <div class="wrapper">
+        <main class="main">
+            <section class="top">
+                <div class="title ">
+                  Dimitrios Samaras
+                  <div class="subtitle">
+                    Software Engineer
+                  </div>
+                  <div class="contact-information">
+                    samarasdelta@gmail.com | +30 697 029 8386‬
+                  </div>
+                </div>
+              </section>
+        </main>
+    </div>
+
 </body>
 </html>
 
