--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 
     <head>
         <title>Lazaros Papanikolaou</title>
+        <link href="stylesheet" href="assets/css/main.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css"> 
     </head>
 
 </body>
