--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="left_Side">
         <div class="profileText">
           <div class="ProfilePicture">
-            
+            <img src="https://github.com/lazarospapanikolaou/resume.github.io/blob/fbe76d7748563c90b60361453a7cdffac4a954ac/images/ProfilePicture.jpg">
           </div>
         </div>
       </div>
