--- a/index.html
+++ b/index.html
@@ -1,283 +1,19 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <title>Dimitrios Samaras | Software Engineer</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#2c2c2c" />
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-  <link rel="apple-touch-icon" sizes="180x180" href="images/icons/icon-192x192.png">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100,100i,300,300i,400,400i,600,600i,700,700i" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/main.css" />
-  <link href="assets/css/print.css" media="print" rel="stylesheet" />
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- This is the style for the header -->
+    <link rel="stylesheet" href="assets/css/main.css">
+    <title>Lazaros Papanikolaou | Resume Page</title>
 </head>
 
 <body>
-  <div id="print" class="print icon" title="Get a pdf copy">
-    <i class="material-icons">&#xE8AD;</i>
-  </div>
-  <div class="wrapper">
-    <main class="main">
-      <section class="top">
-        <div class="title ">
-          Dimitrios Samaras
-          <div class="subtitle">
-            Software Engineer
-          </div>
-          <div class="contact-information">
-            samarasdelta@gmail.com | +30 697 029 8386‬
-          </div>
-        </div>
-      </section>
-      <section class="section">
-        <div class="horizonLine" id="experience">
-          <a id="user-content-buttonjs" class="anchor" aria-hidden="true" href="#experience">
-            <svg viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
-              <path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
-            </svg>
-          </a>
-          EXPERIENCE</div>
-        <div class="container">
-          <div class="iconHug">
-            <div class="icon">
-              <i class="material-icons">&#xE86F;</i>
-            </div>
-          </div>
-          <div class="items">
-            <div class="item">
-              <div class="entity">
-                <img loading="lazy" src="./images/conferience.png">
-                <div>
-                  <div class="what">Software Developer (Internship)</div>
-                  <div class="where">
-                    <a href="https://conferience.com/" target="_blank" rel="noreferrer">Conferience.com</a>
-                    <span class="when">/ April 2021 - June 2021</span>
-                  </div>
-                </div>
-              </div>
-              <div class="tech-stack"> Tech stack: ReactJS, JavaScript, HTML, CSS, SQL, PHP </div>
-              <div class="desc">
-                Company's main website reconstruction with ReactJs on the Front-end, starting completely from scratch using state of the art technologies.
-                <ul>
-                  <li>Fully responsive layout</li>
-                  <li>User friendly</li>
-                  <li>Cross-Browser compatible</li>
-                  <li>Centralised Git Workflow </li>
-                </ul>
-                  My main responsibility was to deliver small tasks on a daily basis, to collaborate with developers and UX designers, as well as to bring new ideas to the table.
-              </div>
-            </div>
-            <div class="item">
-              <div class="entity">
-                <img loading="lazy" src="./images/delta1.png">
-                <div>
-                  <div class="what">Freelance Web Designer / Developer</div>
-                  <div class="where">
-                    <a href="https://github.com/zummashu" target="_blank" rel="noreferrer">samarasdelta</a>
-                    <span class="when">/ 2019 - Present</span>
-                  </div>
-                </div>
-              </div>
-              <div class="tech-stack"> Tech stack: ReactJS, NodeJS, JavaScript, HTML, CSS, SCSS, SQL, PHP, Photoshop </div>
-              <div class="desc">                
-                <ul>
-                  <li>Designing and developing sites using CMS systems, Joomla and WordPress</li>
-                  <li>Developing custom web applications for small and medium businesses</li>
-                  <li>Communicating with customers and learning how to analyze their requirements and design an effective solution</li>
-                  <li>Learning how to estimate the cost of a project and negotiating</li>
-                  <li>Cooperating with graphic designers and transforming .psd and .eps files into templates</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section">
-        <div class="horizonLine" id="education">
-          <a class="anchor" aria-hidden="true" href="#education">
-            <svg viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
-              <path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
-            </svg>
-          </a>
-          EDUCATION
-        </div>
-        <div class="container">
-          <div class="iconHug">
-            <div class="icon">
-              <i class="material-icons">&#xE80C;</i>
-            </div>
-          </div>
-          <div class="items">
-            <div class="item">
-              <div class="entity">
-                <img loading="lazy" src="./images/ece.png">
-                <div>
-                  <div class="what">MEng in Informatics & Telecommunications Engineering</div>
-                  <div class="where">
-                    <a href="https://www.ece.uowm.gr/" target="_blank" rel="noreferrer">University of Western Macedonia</a>
-                    <span class="when">/ 2014 - 2020</span>
-                  </div>
-                </div>
-              </div>
-              <div class="desc">
-                Thesis: Design and Implementation of a researcher’s collaborative web site
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="section" id="volunteering">
-        <div class="horizonLine">
-          <a id="user-content-buttonjs" class="anchor" aria-hidden="true" href="#volunteering">
-            <svg viewBox="0 0 16 16" version="1.1" width="16" height="16" aria-hidden="true">
-              <path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path>
-            </svg>
-          </a>
-          VOLUNTEERING</div>
-        <div class="container">
-          <div class="iconHug">
-            <div class="icon">
-              <i class="material-icons">&#xEA70;</i>
-            </div>
-          </div>
-          <div class="items">
-            <div class="item">
-              <div class="entity">
-                <img loading="lazy" src="./images/justradio.png">
-                <div>
-                  <div class="what">On Air Producer, Web Designer, Τechnician, Administrator</div>
-                  <div class="where">
-                    <a target="_blank" rel="noreferrer">Just Radio</a>
-                    <span class="when">/ 2015 - 2019</span>
-                  </div>
-                </div>
-              </div>
-              <div class="desc">
-                <li>Public service for the local community</li>
-                <li>Designed & builded station's website</li>
-                <li>Organised two-day music festival with 20+ bands</li>
-                <li>Producing my own web radio series since 2015 with many local artists and producers on various projects & ideas</li>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-    </main>
-    </article>
-    <aside class="aside aside-1 sticky">
-      <section class="sidebar">
-        <div class="profilePicture">
-        </div>
-        <div class="profile">
-          <h3>PROFILE</h3>
-          <i>My name is Dimitrios Samaras and I am a graduate student from the University of Western Macedonia, Department of Informatics & Telecommunications Engineering.
-            <br> Currently working on my thesis project which is a React-based application.<br> 
-            <br />My main goal is to extend my professional and educational development regarding advanced web applications and tools.
-          </i>
-        </div>
-        <div class="contactDetails">
-          <div class="detail">
-            <div class="alignCenter icon">
-              <a href="https://www.linkedin.com/in/samarasdelta" style="text-decoration: none;" target="_blank" rel="noreferrer">
-                <i class="fa fa-linkedin" style="height: 51.19px;"></i>
-              </a>
-            </div>
-            <div class="alignCenter">
-              <a href="https://www.linkedin.com/in/samarasdelta" style="text-decoration: none;" target="_blank" rel="noreferrer">LinkedIn</a>
-            </div>
-          </div>
-          <div class="detail">
-            <div class="alignCenter icon">
-              <a href="callto:+306970298386‬" style="text-decoration: none;">
-                <i class="material-icons">&#xE0CF;</i>
-              </a>
-            </div>
-            <div class="alignCenter">
-              <a href="callto:+306970298386‬" style="text-decoration: none;">+30 697 029 8386‬</a>
-            </div>
-          </div>
-
-          <div class="detail">
-            <div class="alignCenter icon">
-              <a href="mailto:samarasdelta@gmail.com" style="text-decoration: none;">
-                <i class="material-icons">&#xE0BE;</i>
-              </a>
-            </div>
-            <div class="alignCenter">
-              <a href="mailto:samarasdelta@gmail.com" style="text-decoration: none;">samarasdelta@gmail.com</a>  
-            </div>
-          </div>
-
-          <div class="detail">
-            <div class="alignCenter icon mycursor">
-              <i class="material-icons">&#xE88A;</i>
-            </div>
-            <div class="alignCenter">
-              Athens, Greece
-            </div>
-          </div>
-        </div>
-
-        <div class="expertise">
-          <h3 class="alignCenter">SKILLS</h3>
-          <ul>
-            <li>
-              React
-            </li>
-            <li>
-              CSS
-            </li>
-            <li>
-              HMTL5
-            </li>
-            <li>
-              NodeJS
-            </li>
-            <li>
-              JavaScript
-            </li>
-          </ul>
-        </div>
-
-        <div class="expertise">
-          <h3 class="alignCenter">TOOLS & TECHNOLOGIES</h3>
-          <ul>
-            <li>
-              Bash
-            </li>
-            <li>
-              Linux
-            </li>
-            <li>
-              Git
-            </li>
-          </ul>
-        </div>
-
-        <div class="languages">
-          <h3 class="alignCenter">LANGUAGES</h3>
-          <ul>
-            <li>
-              Greek (Native)
-            </li>
-            <li>
-              English (Professional)
-            </li>
-          </ul>
-        </div>
-        <div class="brand" title="GitHub Page">
-          Developed by<br>
-          <a href="https://github.com/zummashu" target="_blank" rel="noreferrer">
-            <img loading="lazy" class="mi" position="center" alt="Samaras monogram" src="./favicon.ico" />
-          </a>
-        </div>
-      </section>
-    </aside>
-  </div>
+    <div class="container">
+      <div class="left_Side"></div>
+      <div class="right_Side"></div>
+    </div>    
 </body>
-<script src="assets/js/index.js"></script>
 
 </html>
