--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
 <body>
     <div class="container">
       <div class="left_Side"></div>
-      <div class="right_Side"></div>
+      <div class="right_Side">
+        <div class="title">
+          Lazaros Papanikolaou
+          <div class="subtitle">
+            Software Enginneer
+          </div>
+        </div>
+      </div>
     </div>    
 </body>
 
