--- a/index.html
+++ b/index.html
@@ -13,10 +13,17 @@
     <div class="container">
       <div class="left_Side"></div>
       <div class="right_Side">
+
         <div class="title">
           Lazaros Papanikolaou
           <div class="subtitle">
             Software Enginneer
+          </div>
+        </div>
+
+        <div class="section">
+          <div class="horizonLine" id="exprerience">
+            EXPERIENCE 
           </div>
         </div>
       </div>
