--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
     <div class="container">
       <div class="left_Side"></div>
+
+
       <div class="right_Side">
 
         <div class="title">
@@ -24,6 +26,40 @@
         <div class="section">
           <div class="horizonLine" id="exprerience">
             EXPERIENCE 
+          </div>
+          <div class="container1">
+            <div class="iconHugLine"></div>
+            <div class="items">
+              Information studies
+              dwqdqwqwdqwqwdqwdqdw
+              dwqdqwdqwdqwdqdwqdwqwdqdw
+              dwqdqwqdwqwdqwdqdwqwdqdwqwd
+              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
+              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
+              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
+              Information studies
+              dwqdqwqwdqwqwdqwdqdw
+              dwqdqwdqwdqwdqdwqdwqwdqdw
+              dwqdqwqdwqwdqwdqdwqwdqdwqwd
+              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
+              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
+              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
+              Information studies
+              dwqdqwqwdqwqwdqwdqdw
+              dwqdqwdqwdqwdqdwqdwqwdqdw
+              dwqdqwqdwqwdqwdqdwqwdqdwqwd
+              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
+              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
+              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
+              Information studies
+              dwqdqwqwdqwqwdqwdqdw
+              dwqdqwdqwdqwdqdwqdwqwdqdw
+              dwqdqwqdwqwdqwdqdwqwdqdwqwd
+              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
+              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
+              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
+
+            </div>
           </div>
         </div>
       </div>
