--- a/index.html
+++ b/index.html
@@ -25,40 +25,21 @@
 
         <div class="section">
           <div class="horizonLine" id="exprerience">
-            EXPERIENCE 
+            EDUCATION 
           </div>
           <div class="container1">
             <div class="iconHugLine"></div>
             <div class="items">
-              Information studies
-              dwqdqwqwdqwqwdqwdqdw
-              dwqdqwdqwdqwdqdwqdwqwdqdw
-              dwqdqwqdwqwdqwdqdwqwdqdwqwd
-              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
-              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
-              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
-              Information studies
-              dwqdqwqwdqwqwdqwdqdw
-              dwqdqwdqwdqwdqdwqdwqwdqdw
-              dwqdqwqdwqwdqwdqdwqwdqdwqwd
-              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
-              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
-              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
-              Information studies
-              dwqdqwqwdqwqwdqwdqdw
-              dwqdqwdqwdqwdqdwqdwqwdqdw
-              dwqdqwqdwqwdqwdqdwqwdqdwqwd
-              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
-              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
-              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
-              Information studies
-              dwqdqwqwdqwqwdqwdqdw
-              dwqdqwdqwdqwdqdwqdwqwdqdw
-              dwqdqwqdwqwdqwdqdwqwdqdwqwd
-              dwqqqwdqwdqwdqdwqdwqdwqdwqdwqdw
-              dwqwdqwdqwdqdwqwdqwdqdwqwdqwd
-              dwqqwdqwdqwdqwdqdwqwdqwdqwdqwd
-
+              <div class="item">
+                <div class="entity">
+                  <div>
+                    <div class="what">Bachelor of Information Technology, Computer Programming</div>
+                    <div class="where">Ionian Univercity
+                      <span class="when">/ 2017 - 2021</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
