--- a/index.html
+++ b/index.html
@@ -11,39 +11,47 @@
 
 <body>
     <div class="container">
-      <div class="left_Side"></div>
+
+      <div class="left_Side">
+
+
+      </div>
 
 
       <div class="right_Side">
 
-        <div class="title">
-          Lazaros Papanikolaou
-          <div class="subtitle">
-            Software Enginneer
+        
+          <div class="title ">
+            Lazaros Papanikolaou
+            <div class="subtitle">
+              Software Engineer
+            </div>
           </div>
-        </div>
+        
 
-        <div class="section">
-          <div class="horizonLine" id="exprerience">
-            EDUCATION 
-          </div>
+        <section class="section">
+          <div class="horizonLine" id="experience">
+            EDUCATION</div>
           <div class="container1">
-            <div class="iconHugLine"></div>
+            <div class="iconHug">
+            </div>
             <div class="items">
               <div class="item">
                 <div class="entity">
                   <div>
-                    <div class="what">Bachelor of Information Technology, Computer Programming</div>
-                    <div class="where">Ionian Univercity
-                      <span class="when">/ 2017 - 2021</span>
+                    <div class="what">Software Developer</div>
+                    <div class="where">
+                      <span class="when">/ April 2021 - June 2021</span>
                     </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
+        </section>
+  
       </div>
+
     </div>    
 </body>
 
