--- a/index.html
+++ b/index.html
@@ -39,11 +39,15 @@
               <div class="item">
                 <div class="entity">
                   <div>
-                    <div class="what">Software Developer</div>
-                    <div class="where">
+                    <div class="what">BSc in Information Technology, Computer and Network Security</div>
+                    <div class="where">Ionian University
                       <span class="when">/ April 2021 - June 2021</span>
                     </div>
                   </div>
+                </div>
+                <div class="desc">
+                  Thesis: Software implementation in
+                  Sim Swap cyber attack
                 </div>
               </div>
             </div>
