--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <div class="items">
               <div class="item">
                 <div class="entity">
+                  <img loading="lazy" src="./images/ionianUni.png">
                   <div>
                     <div class="what">BSc in Information Technology, Computer and Network Security</div>
                     <div class="where">Ionian University
