--- a/index.html
+++ b/index.html
@@ -42,13 +42,28 @@
                   <div>
                     <div class="what">BSc in Information Technology, Computer and Network Security</div>
                     <div class="where">Ionian University
-                      <span class="when">/ April 2021 - June 2021</span>
+                      <span class="when">/ October 2017 - September 2021</span>
                     </div>
                   </div>
                 </div>
                 <div class="desc">
                   Thesis: Software implementation in
                   Sim Swap cyber attack
+                </div>
+                <div class="desc1">
+                   Grade: 10/10, Live Link: 
+                  <a class="link" href="https://" target="_blank" rel="noreferrer">https://</a>
+                </div>
+              </div>
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="./images/ionianUni.png">
+                  <div>
+                    <div class="what">ESB Level 1 Certificate in ESOL International All Modes - (B2)</div>
+                    <div class="where">English Speaking Board (International) Ltd
+                      <span class="when">/ December 2017</span>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
