--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/ionianUni.png">
+                  <img loading="lazy" src="./images/ltd.jpg">
                   <div>
                     <div class="what">ESB Level 1 Certificate in ESOL International All Modes - (B2)</div>
                     <div class="where">English Speaking Board (International) Ltd
