--- a/index.html
+++ b/index.html
@@ -51,8 +51,11 @@
                   Sim Swap cyber attack
                 </div>
                 <div class="desc1">
-                   Grade: 10/10, Live Link: 
-                  <a class="link" href="https://" target="_blank" rel="noreferrer">https://</a>
+                   Grade: 10/10, Live Link Site: 
+                  <a class="link" href="https://www.lpsecure.net/" target="_blank" rel="noreferrer">https://www.lpsecure.net/</a>
+                </div>
+                <div class="desc2">
+                  Demo Android App Presentantion:
                 </div>
               </div>
               <div class="item">
