--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 </div>
                 <div class="desc2">
                   Demo Android App Presentantion:
+                  <video id="myvideo" width="320" height="240" autoplay loop muted>
+                    <source src="./" type="video/mp4">
+                  </video>
+                  <button onclick="toggle(this)">Hide Video</button>
                 </div>
               </div>
               <div class="item">
@@ -77,5 +81,6 @@
 
     </div>    
 </body>
+<script src="assets/scripts/elements.js"></script>
 
 </html>
