--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                   <div class="modal">
                     <a href="#" onclick="toggle();"> Play Video </a>
                     <div class="videoContainer">
-                      <video src="./video/AndroidApp.mp4" autoplay muted loop></video>         
+                      <video src="./video/AndroidApp.mp4" autoplay muted loop></video>
+                      <img src="./images/close.png" class="close" onclick="toggle();">         
                     </div>  
                   </div>
 
