--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         
 
         <section class="section">
-          <div class="horizonLine" id="experience">
+          <div class="horizonLine" id="education">
             EDUCATION</div>
           <div class="container1">
             <div class="iconHug">
@@ -56,8 +56,8 @@
                 </div>
                 <div class="desc2">
                   Demo Android App Presentantion:
-                  <div class="modal">
-                    <a href="#" onclick="toggle();"> Play Video </a>
+                  <a href="#" onclick="toggle();"> Demonstrate App </a>
+                  <div class="modal">                   
                     <div class="videoContainer">
                       <video src="./video/AndroidApp.mp4" autoplay muted loop></video>
                       <img src="./images/close.png" class="close" onclick="toggle();">         
@@ -88,6 +88,28 @@
           </div>
         </section>
   
+        <section class="section">
+          <div class="horizonLine" id="certifications">
+            CERTIFICATIONS
+          </div>
+          <div class="container1">
+            <div class="iconHug">
+            </div>
+            <div class="items">
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="">
+                  <div>
+                    <div class="what"></div>
+                    <div class="where">
+                      <span class="when"></span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </div>
 
     </div>    
