--- a/index.html
+++ b/index.html
@@ -98,6 +98,29 @@
             <div class="items">
               <div class="item">
                 <div class="entity">
+                  <img loading="lazy" src="./images/EuropeanUnion.png">
+                  <div>
+                    <div class="what">Driving Licence, Credential ID Level B</div>
+                    <div class="where">European Union
+                      <span class="when">/ Issued July 2017</span>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section class="section">
+          <div class="horizonLine" id="experience&projects">
+            EXPRERIENCE & PROJECTS
+          </div>
+          <div class="container1">
+            <div class="iconHug">
+            </div>
+            <div class="items">
+              <div class="item">
+                <div class="entity">
                   <img loading="lazy" src="">
                   <div>
                     <div class="what"></div>
@@ -110,6 +133,7 @@
             </div>
           </div>
         </section>
+
       </div>
 
     </div>    
