--- a/index.html
+++ b/index.html
@@ -121,15 +121,39 @@
             <div class="items">
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="">
+                  <img loading="lazy" src="./images/HellenicArmy.png">
                   <div>
-                    <div class="what"></div>
-                    <div class="where">
-                      <span class="when"></span>
+                    <div class="what">Artillery Company Specialist</div>
+                    <div class="where">Greek Army
+                      <span class="when">/ November 2021 - July 2022</span>
                     </div>
                   </div>
                 </div>
               </div>
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="./images/HellenicArmy.png">
+                  <div>
+                    <div class="what">Software Development against Sim Swapping attacks</div>
+                    <div class="where">Thesis Project 
+                      <span class="when">/ January 2021 - August 2021</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc3">
+                  Tech stack: Laravel Framework, Android Studio, Php, Java, SQL, XML, Json, RestFull Api, Http Responses-Requests
+                </div>
+                <div class="desc4">
+                  Comanys name
+                  <ul>
+                    <li>Friendly User Interface</li>
+                    <li>User Authentication with OTP number based on DeviceID</li>
+                    <li>Integrity and privacy of personal information using Rest Api for the Responses-Requests senders</li>
+                    <li></li>
+                  </ul>
+                </div>
+              </div>
+
             </div>
           </div>
         </section>
