--- a/index.html
+++ b/index.html
@@ -144,16 +144,15 @@
                   Tech stack: Laravel Framework, Android Studio, Php, Java, SQL, XML, Json, RestFull Api, Http Responses-Requests
                 </div>
                 <div class="desc4">
-                  Comanys name
+                  I created two softare applications such as Android Application and Rest API that is responsible for the Authentication and verification of the user using unique Device number.
                   <ul>
-                    <li>Friendly User Interface</li>
-                    <li>User Authentication with OTP number based on DeviceID</li>
-                    <li>Integrity and privacy of personal information using Rest Api for the Responses-Requests senders</li>
-                    <li></li>
+                    <li>Friendly User Interface.</li>
+                    <li>User Authentication with OTP number based on DeviceID.</li>
+                    <li>Integrity and privacy of personal information using Rest Api for the Responses-Requests senders.</li>
+                    <li>Two softwares with front-end and back-end technology (Rest Api and Android App).</li>
                   </ul>
                 </div>
               </div>
-
             </div>
           </div>
         </section>
