--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   <a href="#" onclick="toggle();"> Demonstrate App </a>
                   <div class="modal">                   
                     <div class="videoContainer">
-                      <video src="./video/AndroidApp.mp4" autoplay muted loop></video>
+                      <video src="./video/AndroidApp.mp4" controls muted></video>
                       <img src="./images/close.png" class="close" onclick="toggle();">         
                     </div>  
                   </div>
@@ -144,7 +144,7 @@
                   Tech stack: Laravel Framework, Android Studio, Php, Java, SQL, XML, Json, RestFull Api, Http Responses-Requests
                 </div>
                 <div class="desc4">
-                  I created two softare applications such as Android Application and Rest API that is responsible for the Authentication and verification of the user using unique Device number.
+                  I created two software applications such as Android Application and Rest API that is responsible for the Authentication and verification of the user using unique Device number.
                   <ul>
                     <li>Friendly User Interface.</li>
                     <li>User Authentication with OTP number based on DeviceID.</li>
