--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/HellenicArmy.png">
+                  <img loading="lazy" src="./images/">
                   <div>
                     <div class="what">Software Development against Sim Swapping attacks</div>
                     <div class="where">Thesis Project 
