--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/">
+                  <img loading="lazy" src="./images/lpsecure.png">
                   <div>
                     <div class="what">Software Development against Sim Swapping attacks</div>
                     <div class="where">Thesis Project 
@@ -153,6 +153,47 @@
                   </ul>
                 </div>
               </div>
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="./images/lpsecure.png">
+                  <div>
+                    <div class="what">Personal Web Designer - Developer</div>
+                    <div class="where">
+                      <a href="https://github.com/lazarospapanikolaou" target="_blank" rel="noreferrer">lazarospapanikolaou</a> 
+                      <span class="when">/ 2018 - Present</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc3">
+                  Tech stack: HTML, CSS, javascript, SQL, PHP
+                </div>
+                <div class="desc4">
+                  Working on different projects for my own perpose and for the Ionian University. 
+                  <ul>
+                    <li>Familiarization with github environmnet.</li>
+                    <li>Working and exercising on multiple small projects.</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="./images/lpsecure.png">
+                  <div>
+                    <div class="what">Personal wordpress designer</div>
+                    <div class="where">
+                      <a class="link" href="https://www.lpsecure.net/" target="_blank" rel="noreferrer">https://www.lpsecure.net/</a>
+                      <span class="when"> July 2022 - Present</span>
+                    </div>
+                  </div>
+                </div>
+                <div class="desc3">
+                  Tech stack: Wordpress, live host provider
+                </div>
+                <div class="desc4">
+                  Create a website that demonstrate the necessity that provides LPsecure android application for the user's data privacy and present the methodology that Sim Swapping attack has.
+                </div>
+              </div>
+
             </div>
           </div>
         </section>
