--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/lpsecure.png">
+                  <img loading="lazy" src="./images/">
                   <div>
                     <div class="what">Personal Web Designer - Developer</div>
                     <div class="where">
@@ -177,7 +177,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/lpsecure.png">
+                  <img loading="lazy" src="./images/Wordpresslogo.png">
                   <div>
                     <div class="what">Personal wordpress designer</div>
                     <div class="where">
