--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
               </div>
               <div class="item">
                 <div class="entity">
-                  <img loading="lazy" src="./images/">
+                  <img loading="lazy" src="./images/github.jpg">
                   <div>
                     <div class="what">Personal Web Designer - Developer</div>
                     <div class="where">
@@ -171,7 +171,7 @@
                   Working on different projects for my own perpose and for the Ionian University. 
                   <ul>
                     <li>Familiarization with github environmnet.</li>
-                    <li>Working and exercising on multiple small projects.</li>
+                    <li>Working and exercising on small projects.</li>
                   </ul>
                 </div>
               </div>
