--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div class="container">
 
       <div class="left_Side">
-
-
+        <div class="profilePicture">
+          <img src="./images/ProfilePicture.jpg">
+        </div>
       </div>
 
 
