--- a/index.html
+++ b/index.html
@@ -13,8 +13,36 @@
     <div class="container">
 
       <div class="left_Side">
-        <div class="profilePicture">
-          <img src="./images/ProfilePicture.jpg">
+        <div class="profileText">
+          <div class="imgBx">
+            <img src="./images/ProfilePicture.jpg">
+          </div>
+          <h2>Lazaros Papanikolaou</h2>
+        </div>
+        <div class="contactInfo">
+          <h3 class="title">Contact Info</h3>
+          <ul>
+            <li>
+              <span class="icon"></span>
+              <span class="text">+6982113371</span>
+            </li>
+            <li>
+              <span class="icon"></span>
+              <span class="text">lazaros.papanikolaoy@gmail.com</span>
+            </li>
+            <li>
+              <span class="icon"></span>
+              <span class="text">mywebsite</span>
+            </li>
+            <li>
+              <span class="icon"></span>
+              <span class="text">Linkein</span>
+            </li>
+            <li>
+              <span class="icon"></span>
+              <span class="text">Github</span>
+            </li>
+          </ul>
         </div>
       </div>
 
