--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 
     <!-- This is the style for the header -->
     <link rel="stylesheet" href="assets/css/main.css">
-    <title>Lazaros Papanikolaou | Resume Page</title>
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" integrity="sha512-5A8nwdMOWrSz20fDsjczgUidUBR8liPYU+WymTZP1lmY9G6Oc7HlZv156XqnsgNUzTyMefFTcsFH/tnJE/+xBg==" crossorigin="anonymous" referrerpolicy="no-referrer" /></head>
 
 <body>
     <div class="container">
@@ -17,30 +16,36 @@
           <div class="imgBx">
             <img src="./images/ProfilePicture.jpg">
           </div>
-          <h2>Lazaros Papanikolaou</h2>
+          <h3>PROFILE</h3>
+          <i>My name is Lazaros Papanikolaou and i am a Graduate student from the Ionian University, Department of Information Technology.
+             My experience of my graduate carrer hold 4 years and i was working on projects with software and application development. <br><br>The last 2 years of my graduation career i was specialized on the filed of information system.</i>
         </div>
         <div class="contactInfo">
           <h3 class="title">Contact Info</h3>
           <ul>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
               <span class="text">+6982113371</span>
             </li>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
               <span class="text">lazaros.papanikolaoy@gmail.com</span>
             </li>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
               <span class="text">mywebsite</span>
             </li>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
               <span class="text">Linkein</span>
             </li>
             <li>
-              <span class="icon"></span>
+              <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
               <span class="text">Github</span>
+            </li>
+            <li>
+              <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></i></span>
+              <span class="text">Larisa, Greece</span>
             </li>
           </ul>
         </div>
