--- a/index.html
+++ b/index.html
@@ -24,6 +24,54 @@
           <h3 class="title">Contact Info</h3>
           <ul>
             <li>
+              <div class="LinkedInDetail">
+                <div class="icon">
+                  <a href="https://www.linkedin.com/in/lazarospapanikolaou/" style="text-decoration: none;" target="_blank" rel="noreferrer"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                </div>
+                <div class="Text">
+                  <a href="https://www.linkedin.com/in/lazarospapanikolaou/" style="text-decoration: none;" target="_blank" rel="noreferrer">LinkedIn</a>
+                </div>
+              </div>
+
+              <div class="PhoneDetail">
+                <div class="icon">
+                  <a href="callto:+3069782113371&#x202C;" style="text-decoration: none;"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                </div>
+                <div class="Text">
+                  <a href="callto:+3069782113371&#x202C;" style="text-decoration: none;">+30 698 211 3371&#x202C;</a>
+                </div>
+              </div>
+
+              <div class="EmailDetail">
+                <div class="icon">
+                  <a href="mailto:lazaros.papanikoaloy@gmail.com" style="text-decoration: none;"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
+                </div>
+                <div class="Text">
+                  <a href="lazaros.papanikolaoy@gmail.com" style="text-decoration: none;">lazaros.papanikolaoy@gmail.com</a>
+                </div>
+              </div>
+
+              <div class="WebsiteDetail">
+                <div class="icon">
+                  <a></a>
+                </div>
+                <div class="Text">
+                  <a></a> 
+                </div>
+              </div>
+
+              <div class="GithubDetail">
+                <div class="icon">
+                  <a></a>
+                </div>
+                <div class="Text">
+                  <a></a>
+                </div>
+              </div>
+
+
+
+
               <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
               <span class="text">+6982113371</span>
             </li>
