--- a/index.html
+++ b/index.html
@@ -18,12 +18,10 @@
           </div>
           <h3>PROFILE</h3>
           <i>My name is Lazaros Papanikolaou and i am a Graduate student from the Ionian University, Department of Information Technology.
-             My experience of my graduate carrer hold 4 years and i was working on projects with software and application development. <br><br>The last 2 years of my graduation career i was specialized on the filed of information system.</i>
+             My experience of my graduate career hold 4 years and i was working on projects with software and application development. <br><br>The last 2 years of my graduation career i was specialized on the filed of information system.</i>
         </div>
         <div class="contactInfo">
-          <h3 class="title">Contact Info</h3>
           <ul>
-            <li>
               <div class="LinkedInDetail">
                 <div class="icon">
                   <a href="https://www.linkedin.com/in/lazarospapanikolaou/" style="text-decoration: none;" target="_blank" rel="noreferrer"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
@@ -33,68 +31,39 @@
                 </div>
               </div>
 
-              <div class="PhoneDetail">
-                <div class="icon">
-                  <a href="callto:+3069782113371&#x202C;" style="text-decoration: none;"><i class="fa fa-phone" aria-hidden="true"></i></a>
-                </div>
-                <div class="Text">
-                  <a href="callto:+3069782113371&#x202C;" style="text-decoration: none;">+30 698 211 3371&#x202C;</a>
-                </div>
-              </div>
-
               <div class="EmailDetail">
                 <div class="icon">
                   <a href="mailto:lazaros.papanikoaloy@gmail.com" style="text-decoration: none;"><i class="fa fa-envelope-o" aria-hidden="true"></i></a>
                 </div>
                 <div class="Text">
-                  <a href="lazaros.papanikolaoy@gmail.com" style="text-decoration: none;">lazaros.papanikolaoy@gmail.com</a>
+                  <a href="mailto:lazaros.papanikolaoy@gmail.com" style="text-decoration: none;">lazaros.papanikolaoy@gmail.com</a>
                 </div>
               </div>
 
               <div class="WebsiteDetail">
                 <div class="icon">
-                  <a></a>
+                  <a href="https://www.lpsecure.net" style="text-decoration: none;" target="_blank" rel="noreferrer"><i class="fa fa-globe" aria-hidden="true"></i></a>
                 </div>
                 <div class="Text">
-                  <a></a> 
+                  <a href="https://www.lpsecure.net" style="text-decoration: none;">lpsecure.net</a>
                 </div>
               </div>
 
               <div class="GithubDetail">
                 <div class="icon">
-                  <a></a>
+                  <a href="https://github.com/lazarospapanikolaou" style="text-decoration: none;" target="_blank" rel="noreferrer"><i class="fa fa-github" aria-hidden="true"></i></a>
                 </div>
                 <div class="Text">
-                  <a></a>
+                  <a href="https://github.com/lazarospapanikolaou" style="text-decoration: none;" target="_blank" rel="noreferrer">Github</a>
                 </div>
               </div>
 
-
-
-
-              <span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span>
-              <span class="text">+6982113371</span>
-            </li>
-            <li>
-              <span class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
-              <span class="text">lazaros.papanikolaoy@gmail.com</span>
-            </li>
-            <li>
-              <span class="icon"><i class="fa fa-globe" aria-hidden="true"></i></span>
-              <span class="text">mywebsite</span>
-            </li>
-            <li>
-              <span class="icon"><i class="fa fa-linkedin" aria-hidden="true"></i></span>
-              <span class="text">Linkein</span>
-            </li>
-            <li>
-              <span class="icon"><i class="fa fa-github" aria-hidden="true"></i></span>
-              <span class="text">Github</span>
-            </li>
-            <li>
-              <span class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></i></span>
-              <span class="text">Larisa, Greece</span>
-            </li>
+              <div class="LocationDetail">
+                <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+                <div class="Text">
+                  Larisa, Greece
+                </div>
+              </div>            
           </ul>
         </div>
       </div>
@@ -123,36 +92,21 @@
                   <img loading="lazy" src="./images/ionianUni.png">
                   <div>
                     <div class="what">BSc in Information Technology, Computer and Network Security</div>
-                    <div class="where">Ionian University
+                    <div class="where">Ionian University, Corfu
                       <span class="when">/ October 2017 - September 2021</span>
                     </div>
                   </div>
                 </div>
-                <div class="desc">
-                  Thesis: Software implementation in
-                  Sim Swap cyber attack
-                </div>
-                <div class="desc1">
-                   Grade: 10/10, Live Link Site: 
-                  <a class="link" href="https://www.lpsecure.net/" target="_blank" rel="noreferrer">https://www.lpsecure.net/</a>
-                </div>
-                <div class="desc2">
-                  Demo Android App Presentantion:
-                  <a href="#" onclick="toggle();"> Demonstrate App </a>
-                  <div class="modal">                   
-                    <div class="videoContainer">
-                      <video src="./video/AndroidApp.mp4" controls muted></video>
-                      <img src="./images/close.png" class="close" onclick="toggle();">         
-                    </div>  
+              </div>
+              <div class="item">
+                <div class="entity">
+                  <img loading="lazy" src="./images/ltd.jpg">
+                  <div>
+                    <div class="what">High School Diploma, Education</div>
+                    <div class="where">10st High School of Larisa, Thessaly
+                      <span class="when">/ 2014 - 2017</span>
+                    </div>
                   </div>
-
-                  <script type="text/javascript">
-                    function toggle(){
-                      var videoContainer = document.querySelector(".videoContainer")
-                      videoContainer.classList.toggle("active")
-                    }
-                  </script>
-                  
                 </div>
               </div>
               <div class="item">
@@ -222,8 +176,33 @@
                     </div>
                   </div>
                 </div>
+                <div class="desc">
+                  Thesis: Software implementation in
+                  Sim Swap cyber attack
+                </div>
+                <div class="desc1">
+                   Grade: 10/10, Live Link Site: 
+                  <a class="link" href="https://www.lpsecure.net/" target="_blank" rel="noreferrer">https://www.lpsecure.net/</a>
+                </div>
+                <div class="desc2">
+                  Demo Android App Presentantion:
+                  <a href="#" onclick="toggle();"> Demonstrate App </a>
+                  <div class="modal">                   
+                    <div class="videoContainer">
+                      <video src="./video/AndroidApp.mp4" controls muted></video>
+                      <img src="./images/close.png" class="close" onclick="toggle();">         
+                    </div>  
+                  </div>
+
+                  <script type="text/javascript">
+                    function toggle(){
+                      var videoContainer = document.querySelector(".videoContainer")
+                      videoContainer.classList.toggle("active")
+                    }
+                  </script>
+
                 <div class="desc3">
-                  Tech stack: Laravel Framework, Android Studio, Php, Java, SQL, XML, Json, RestFull Api, Http Responses-Requests
+                  Tech stack: Laravel Framework, Android Studio, Php, Java, SQL, XML, Json, RestFull Api
                 </div>
                 <div class="desc4">
                   I created two software applications such as Android Application and Rest API that is responsible for the Authentication and verification of the user using unique Device number.
@@ -239,7 +218,7 @@
                 <div class="entity">
                   <img loading="lazy" src="./images/github.jpg">
                   <div>
-                    <div class="what">Personal Web Designer - Developer</div>
+                    <div class="what">Web developer</div>
                     <div class="where">
                       <a href="https://github.com/lazarospapanikolaou" target="_blank" rel="noreferrer">lazarospapanikolaou</a> 
                       <span class="when">/ 2018 - Present</span>
@@ -250,7 +229,7 @@
                   Tech stack: HTML, CSS, javascript, SQL, PHP
                 </div>
                 <div class="desc4">
-                  Working on different projects for my own perpose and for the Ionian University. 
+                  Working on different projects for my own purpose and for the Ionian University. 
                   <ul>
                     <li>Familiarization with github environmnet.</li>
                     <li>Working and exercising on small projects.</li>
@@ -261,7 +240,7 @@
                 <div class="entity">
                   <img loading="lazy" src="./images/Wordpresslogo.png">
                   <div>
-                    <div class="what">Personal wordpress designer</div>
+                    <div class="what">Wordpress designer</div>
                     <div class="where">
                       <a class="link" href="https://www.lpsecure.net/" target="_blank" rel="noreferrer">https://www.lpsecure.net/</a>
                       <span class="when"> July 2022 - Present</span>
