--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
               </div>            
           </ul>
         </div>
+        <div class="skillsText"></div>
+          <h2>SKILLS</h2>
+          
       </div>
 
 
