--- a/index.html
+++ b/index.html
@@ -68,6 +68,32 @@
         </div>
         <div class="skillsText"></div>
           <h2>SKILLS</h2>
+          <div class="SkillsCenter">
+            <ul>
+              <li>Bash</li>
+              <li>PHP</li>
+            </ul>
+          </div>
+
+          <div class="toolsText"></div>
+          <h2>TOOLS & TECHNOLOGIES</h2>
+          <div class="ToolsCenter">
+            <ul>
+              <li>Linux</li>
+              <li>Laravel framework</li>
+            </ul>
+          </div>
+
+          <div class="LanguagesText"></div>
+          <h2>LANGUAGES</h2>
+          <div class="LanguagesCenter">
+            <ul>
+              <li>English</li>
+              <li>Greek (Native)</li>
+            </ul>
+          </div>
+
+
           
       </div>
 
